✅ Fix -> Repair Handbook Toast Feature ✅ Add -> Add progress events and progress data-driven functionality